manifests/globex/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: globex-dev
  annotations:
    kubernetes.io/ingress.class: nginx-public
    link.argocd.argoproj.io/external-link: https://globex-dev.cs.sandbox.codefresh.io/

spec:
  ingressClassName: nginx
  rules:
    - host: globex-dev.cs.sandbox.codefresh.io
      http:
        paths:
          - path: /
            backend:
              service:
                name: globex
                port:
                  number: 80
            pathType: ImplementationSpecific
